--- a/sass/_inventory.scss
+++ b/sass/_inventory.scss
@@ -13,29 +13,60 @@
         font-family: gameboy;
     }
 }
-.inventory {
+.inventory{
     display: grid;
     grid-template-areas: 'auto auto auto';
-    justify-content: center;
-    padding-top: 3rem;
-    gap: 4rem;
-    &__card{
-        background-color: white;
-        width: 250px;
-        height: 350px;
-        &__imagen {
-            height: 70%;
-            background-color: #0a141e;
-            background-size: 31px 31px;
-            background-image: linear-gradient(to right, grey 1px, transparent 1px),
-            linear-gradient(to bottom, grey 1px, transparent 1px);
-            display: flex;
-        }
-        &__container{
-            background-color: #1b252f;
-            height: 30%;
-            color: white;
-            text-align: center;
-        }
-    }
+    justify-content: space-around;
+    padding-top: 2rem;
 }
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+    border-radius: 1rem;
+  }
+  
+  .flip-card-inner {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    border-radius: 1rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    border-radius: 1rem;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-card-back {
+    background-color: #2980b9;
+    color: white;
+    transform: rotateY(180deg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    & p {
+        font-size: 1.5rem;
+        font-family: gameboy;
+    }
+    & h1 {
+        font-size: 2rem;
+    }
+  }
