antes de la pelea

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,14 @@
     color: white;
     font-size: 3rem;
     font-family: gameboy; }
+  .main__nav {
+    display: flex;
+    justify-content: space-around; }
+    .main__nav a {
+      text-decoration: none;
+      color: white;
+      font-family: gameboy;
+      font-weight: bold; }
 
 .inventory {
   display: grid;
@@ -70,6 +78,96 @@
     font-family: gameboy; }
   .flip-card-back h1 {
     font-size: 2rem; }
+
+.captura {
+  display: flex;
+  justify-content: center;
+  height: 768px;
+  background-color: black; }
+  .captura__main {
+    margin-top: 6rem;
+    width: 1024px;
+    background-image: url("../img/campo.webp");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: white; }
+    .captura__main__section {
+      width: 1024px;
+      height: 768px;
+      display: grid;
+      grid-template-areas: 'BarEnemy ImgEnemy' 'ImgTrainer ImgEnemy' 'ImgTrainer BarTrainer' 'footer footer'; }
+      .captura__main__section__bar {
+        background-color: white;
+        width: 20rem;
+        height: 4rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border: solid black 3.5px;
+        border-radius: 0.3rem; }
+        .captura__main__section__bar__enemy {
+          margin-top: 4rem;
+          margin-left: 6rem; }
+        .captura__main__section__bar__trainer {
+          margin-left: 6rem;
+          margin-bottom: 16rem; }
+        .captura__main__section__bar div {
+          font-family: gameboy; }
+      .captura__main__section__img {
+        width: 280px;
+        height: 280px; }
+        .captura__main__section__img img {
+          width: 280px; }
+        .captura__main__section__img__enemy {
+          margin-top: 6rem;
+          margin-left: 6rem; }
+        .captura__main__section__img__trainer {
+          margin-left: 8rem;
+          margin-top: 9rem; }
+    .captura__main__opciones {
+      background-color: aqua;
+      position: absolute;
+      width: 1024px;
+      height: 205px;
+      margin-top: 575px;
+      z-index: 999;
+      display: flex; }
+      .captura__main__opciones__pokebola {
+        border: solid black 3px;
+        width: 100%; }
+      .captura__main__opciones__menu {
+        border: solid black 3px;
+        width: 100%;
+        display: grid;
+        grid-template-areas: 'auto auto'; }
+        .captura__main__opciones__menu div {
+          border: solid black 1px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center; }
+          .captura__main__opciones__menu div a {
+            width: 100%;
+            height: 100%;
+            text-decoration: none; }
+          .captura__main__opciones__menu div button {
+            height: 100%;
+            width: 100%;
+            font-family: gameboy; }
+
+.item10 {
+  grid-area: BarEnemy; }
+
+.item20 {
+  grid-area: ImgEnemy; }
+
+.item30 {
+  grid-area: BarTrainer; }
+
+.item40 {
+  grid-area: ImgTrainer; }
+
+.item50 {
+  grid-area: footer; }
 
 .item1 {
   grid-area: nombre; }
