--- a/sass/_inventory.scss
+++ b/sass/_inventory.scss
@@ -12,6 +12,17 @@
         font-size: 3rem;
         font-family: gameboy;
     }
+    &__nav{
+      display: flex;
+      justify-content: space-around;
+      & a{
+        text-decoration: none;
+        color: white;
+        font-family: gameboy;
+        font-weight: bold;
+      }
+
+    }
 }
 .inventory{
     display: grid;
